--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /shortestPath
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/team?serverTimezone=UTC&allowMultiQueries=true
-    username: root
-    password: root
+    url: jdbc:mysql://47.106.108.49:3306/sep_path
+    username: path14
+    password: sep2314#
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
