--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,30 @@
 server:
-  port: 80
+  port: 8080
   servlet:
-    context-path: /shortestPath
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/sep_path?serverTimezone=UTC
-    username: path14
-    password: sep2314#
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
+    context-path: /
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
+spring:
+  datasource:
+    url: jdbc:mysql://47.106.108.49:3306/chat_genius?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: chat_genius
+    password: chat_genius
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    database: 0
+    host: 47.106.108.49
+    port: 6379
+    password: chat_genius
+  mvc:
+    async:
+      request-timeout: 60000
+model-service:
+  base-url: http://104.167.17.5:46807
+#  base-url: http://localhost:5000
+retrofit:
+  global-timeout:
+    call-timeout-ms: 60000
+    read-timeout-ms: 60000
+    write-timeout-ms: 60000
