--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 spring:
+  application:
+    name: geniusChat
   datasource:
     url: jdbc:mysql://47.106.108.49:3306/chat_genius?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: chat_genius
